# Cuda-Engine

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: eval.yml  nightly.yml  pr.yml
docs/: brainstorming-notes.md  colab.md  cost.md  privacy.md
docs/milestones/: M2-evidence.md  M3-evidence.md  M3-internal-eval-colab-runbook.md  M3-task-4.3-colab-runbook.md  M4-evidence.md  v1.1-evidence.md  v2.0-gemm-rung1-evidence.md
docs/superpowers/plans/: 2026-04-26-cuda-synthesis-engine-plan.md  2026-05-07-stage-escalation-plan.md  2026-05-11-fast1-lift-plan.md  2026-05-11-torch-compile-baseline-plan.md  2026-06-28-v1.1a-multi-provider-llm.md  2026-06-28-v1.1b-slow-kernel-fix.md  2026-06-29-v2.0-gemm-rung1.md
docs/superpowers/specs/: 2026-04-26-cuda-synthesis-engine-design.md  2026-05-07-stage-escalation-design.md  2026-05-11-fast1-lift-design.md  2026-05-11-torch-compile-baseline-design.md  2026-06-28-v1.1-sharpen-design.md  2026-06-29-v2.0-gemm-rung1-design.md
evals/: __init__.py  runner.py
evals/gemm/matmul_bias_gelu_fp16/: notes.md  prompt.txt  reference.py
evals/gemm/matmul_fp16/: notes.md  prompt.txt  shapes.yaml
evals/gemm/matmul_fp32/: notes.md  prompt.txt  reference.py
evals/internal/add_relu_fp32/: notes.md  prompt.txt  reference.py
evals/internal/argmax_fp32/: notes.md  prompt.txt  reference.py
evals/internal/bias_gelu_fp16/: notes.md  prompt.txt  reference.py
evals/internal/celu_fp16/: notes.md  prompt.txt  reference.py
evals/internal/clamp_fp32/: notes.md  prompt.txt  reference.py
evals/internal/cumsum_lastdim_fp32/: notes.md  prompt.txt  reference.py
evals/kernelbench/: README.md  __init__.py  filter.py
examples/: notebook.ipynb  web_demo.py
examples/kernels/: README.md
src/cuda_engine/: __init__.py  api.py  cli.py  config.py  orchestrator.py
tests/fixtures/: ncu_basic_vector_add.csv
tests/integration/: test_baseline_torch_compile.py  test_e2e_argmax.py  test_e2e_hard_gate_sad_path.py  test_e2e_perf_loop_escalation.py  test_e2e_rms_norm.py  test_e2e_scalar_multiply.py  test_e2e_sum_reduction.py  test_e2e_vector_add.py  test_local_compile_vector_add.py  test_local_profile_vector_add.py  test_run_kernel_custom_op.py
tests/unit/: test_api.py  test_api_default_router.py  test_bound_classifier.py  test_cli.py  test_config.py  test_config_stage_models.py  test_eval_model_id.py  test_eval_runner.py  test_gemini_client.py  test_gemm_suite.py  test_internal_eval_suite.py  test_kernelbench_filter.py  test_kernelbench_suite.py  test_llm_base.py  test_llm_capabilities.py  test_llm_router.py  test_llm_translate.py  test_nsight_signals.py  test_openai_client.py  test_openai_compatible.py  test_optional_provider_imports.py  test_orchestrator.py  test_orchestrator_routing.py  test_prompts.py  test_prompts_interview.py  test_targets.py  test_web_demo.py
(+224 files in other folders)
