[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "cuda-engine"
version = "1.1.0"
description = "Plain-English -> verified CUDA kernels via Claude-driven agent loop"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["cuda", "gpu", "kernel-generation", "llm", "claude", "pytorch", "code-generation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering",
    "Environment :: GPU :: NVIDIA CUDA",
]
dependencies = [
    "anthropic>=0.40",
    "torch>=2.4",
    "pydantic>=2.7",
    "typer>=0.12",
    "pyyaml>=6",
    "rich>=13",
    "openai>=1.40",
    "google-genai>=0.3",
]

[project.urls]
Homepage = "https://github.com/shivnarainms22/Cuda-Engine"
Repository = "https://github.com/shivnarainms22/Cuda-Engine"
Issues = "https://github.com/shivnarainms22/Cuda-Engine/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.10",
]
demo = ["streamlit>=1.36"]

[project.scripts]
cuda-engine = "cuda_engine.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cuda_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers -p no:cacheprovider"
pythonpath = ["."]
markers = [
    "integration: real LLM + real GPU (slow, costs money)",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/cuda_engine"]
